--- a/TestingDimensions.ipynb
+++ b/TestingDimensions.ipynb
@@ -179,7 +179,9 @@
     "conv1 = conv(2, n_filters, kernel_size)\n",
     "pool1 = maxpool(kernel_size, padding)\n",
     "conv2 = conv(n_filters, n_filters, kernel_size)\n",
-    "pool2 = maxpool(kernel_size, padding)"
+    "pool2 = maxpool(kernel_size, padding)\n",
+    "activation1 = activation()\n",
+    "activation2 = activation()"
    ]
   },
   {
@@ -190,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 10, 2])"
+       "Conv1d(2, 32, kernel_size=(3,), stride=(1,), padding=(1,))"
       ]
      },
      "execution_count": 5,
@@ -199,7 +201,47 @@
     }
    ],
    "source": [
-    "Xb.shape"
+    "conv1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MaxPool1d(kernel_size=3, stride=3, padding=1, dilation=1, ceil_mode=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pool1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Conv1d(32, 32, kernel_size=(3,), stride=(1,), padding=(1,))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv2"
    ]
   },
   {
@@ -210,10 +252,50 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 32, 10])"
+       "MaxPool1d(kernel_size=3, stride=3, padding=1, dilation=1, ceil_mode=False)"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pool2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 10, 2])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 32, 10])"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,28 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 32, 4])"
+       "torch.Size([6, 32, 10])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "respool1 = pool1(resconv1)\n",
-    "respool1.shape"
+    "resact1 = activation1(resconv1)\n",
+    "resact1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +342,28 @@
        "torch.Size([6, 32, 4])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "respool1 = pool1(resact1)\n",
+    "respool1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 32, 4])"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,37 +384,58 @@
        "torch.Size([6, 32, 4])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "respool2 = pool2(resconv2)\n",
-    "resconv2.shape"
+    "resact2 = activation2(resconv2)\n",
+    "resact2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = resconv2.view(resconv2.shape[0], -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 128])"
+       "torch.Size([6, 32, 2])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "respool2 = pool2(resact2)\n",
+    "respool2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = respool2.view(respool2.shape[0], -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 64])"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,44 +446,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 32, 2])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "respool2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2 is the number of variables in the time series here\n",
-    "res = resconv2.view(resconv2.shape[0],2,-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([6, 2, 64])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.shape"
+    "res = respool2.view(respool2.shape[0],2,-1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 2, 32])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Let's try a linear layer now\n",
-    "# 64 is basically n_filters * 2 (i.e. number of variables in the time series)\n",
-    "\n",
-    "linear = nn.Linear(64, p_window)"
+    "res.shape"
    ]
   },
   {
@@ -368,27 +500,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reslin = linear(res)"
+    "# Let's try a linear layer now\n",
+    "# 64 is basically n_filters * 2 (i.e. number of variables in the time series)\n",
+    "\n",
+    "#linear = nn.Linear(64, p_window)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([6, 2, 3])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reslin.shape"
+    "# Let's try something different: with the first parameter of Linear set to the number of filters\n",
+    "\n",
+    "linear = nn.Linear(32, p_window)"
    ]
   },
   {
@@ -399,10 +525,59 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 3, 2])"
+       "Linear(in_features=32, out_features=3, bias=True)"
       ]
      },
      "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reslin = linear(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 2, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reslin.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 3, 2])"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
