--- a/EvaluateDimensions.ipynb
+++ b/EvaluateDimensions.ipynb
@@ -48,11 +48,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computing dimensions in the case of one dimension convolution\n",
+    "\n",
+    "Let's assume our input has size `n_ts` * `w`. After our first convolution, the size of the output should be the following: `n_c_out` * `c_w_out` where:\n",
+    "\n",
+    "$$ n\\_c\\_out = n\\_fs $$\n",
+    "\n",
+    "$$ c\\_w\\_out = \\lfloor\\frac{w + 2 * padding + f\\_size - 2}{c\\_stride} +1\\rfloor $$\n",
+    "\n",
+    "After our first maximum pooling layer, our dimensions will be `n_fs` * `p_w_out` where:\n",
+    "\n",
+    "$$ n\\_fs = n\\_fs $$ (unchanged)\n",
+    "\n",
+    "$$ p\\_w\\_out = \\lfloor\\frac{c\\_w\\_out + 2 * padding + k\\_size - 2}{p\\_stride} + 1\\rfloor $$\n",
+    "\n",
+    "Let's now define a function that will calculate the dimensions of a CNN with the following strucure:\n",
+    "\n",
+    "- 1D Convolution\n",
+    "- Max pooling layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculateDimensions(window, c_in, n_fs, f_size, padding, c_stride, k_size, p_stride):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
