Break one dimension convolution model

--- a/EvaluateDimensions.ipynb
+++ b/EvaluateDimensions.ipynb
@@ -73,13 +73,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import floor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculateDimensions(window, c_in, n_fs, f_size, padding, c_stride, k_size, p_stride):\n",
-    "    pass"
+    "    n_c_out = n_fs\n",
+    "    \n",
+    "    c_w_out = floor((window + 2*padding + f_size - 2) / c_stride + 1)\n",
+    "    \n",
+    "    p_w_out = floor((c_w_out + 2*padding + k_size - 2) / p_stride + 1)\n",
+    "    \n",
+    "    return (n_fs, p_w_out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 16)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for a window of size 25, a quadrivariate time series, convolutions with \n",
+    "# 32 kernels (as stated in the DeepAnt paper), convolution filters\n",
+    "# of size 3, kernel for max pooling of size 2, convolution stride of 1\n",
+    "# pooling stride equel to kernel size (default in pytorch) and \n",
+    "# padding of 1\n",
+    "\n",
+    "window = 25\n",
+    "c_in = 4\n",
+    "n_fs = 32\n",
+    "f_size = 3\n",
+    "padding = 1\n",
+    "c_stride = 1\n",
+    "k_size = 2\n",
+    "p_stride = 2\n",
+    "\n",
+    "(new_c_in, size) = calculateDimensions(window, c_in, n_fs, f_size, padding, c_stride, k_size, p_stride)\n",
+    "(new_c_in, size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 12)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(dim1, dim2) = calculateDimensions(size, new_c_in, n_fs, f_size, padding, c_stride, k_size, p_stride)\n",
+    "(dim1, dim2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computing the size of the fully connected layer\n",
+    "\n",
+    "Pytorch `nn.Linear()` class will transform input of size $(N,*,H_{in})$ into $(N,*,H_{out})$, where $N$ is the batch size, $*$ is any number of dimensions that will be **unchanged** and $H_{in}$ and $H_{out}$ are the sizes of the input and output features (see https://pytorch.org/docs/stable/nn.html?highlight=linear#torch.nn.Linear).\n",
+    "\n",
+    "If we want to output predictions for our time series, this means our output dimensions will be `n_ts` * `p_w` (leaving batch size aside). Therefore, we must first redimension our max pooling output to something that will fit the linear layer. \n",
+    "\n",
+    "One of the way to do that is to use `Tensor.view()` to redimension one of the dimension to `n_ts`, which means that our input dimensions to the linear layer will be `n_ts` * `redim`, where `redim` will be automatically calculated by the `Tensor.view()` method. However, the tricky part is that the product of the max pool output dimensions **MUST** be divisible by `n_ts`, which will probably not always be the case!!\n",
+    "\n",
+    "In the previous case, this gives the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = dim1 * dim2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# c_in is actually n_ts\n",
+    "redim = product / c_in\n",
+    "redim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's break stuff..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 16)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "window = 25\n",
+    "c_in = 7\n",
+    "n_fs = 32\n",
+    "f_size = 3\n",
+    "padding = 1\n",
+    "c_stride = 1\n",
+    "k_size = 2\n",
+    "p_stride = 2\n",
+    "\n",
+    "(new_c_in, size) = calculateDimensions(window, c_in, n_fs, f_size, padding, c_stride, k_size, p_stride)\n",
+    "(new_c_in, size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 12)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(dim1, dim2) = calculateDimensions(size, new_c_in, n_fs, f_size, padding, c_stride, k_size, p_stride)\n",
+    "(dim1, dim2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.857142857142854"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "product = dim1 * dim2\n",
+    "# c_in is actually n_ts\n",
+    "redim = product / c_in\n",
+    "redim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The case above (7 time series) won't work..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two-dimension convolutional layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
